fix navbar spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -214,7 +214,7 @@ body {
 }
 
 .jumbotron {
-    padding: 15rem;
+    padding: 22rem;
     background-image: url('/static/img/skin-large-dark.png');
     background-position: center; 
     background-repeat: no-repeat; 
